==> u-blox/ubxlib/port/platform/nrf5sdk/src/u_port_uart.c <==
# include "u_cfg_override.h" // For a customer's configuration override
#include "stddef.h"    // NULL, size_t etc.
#include "stdint.h"    // int32_t etc.
#include "stdbool.h"
#include "stdio.h"    // snprintf()
#include "u_cfg_sw.h"
#include "u_cfg_hw_platform_specific.h"
#include "u_cfg_os_platform_specific.h" // For U_CFG_OS_YIELD_MS
#include "u_error_common.h"
#include "u_port_clib_platform_specific.h" /* Integer stdio, must be included
#include "u_port_debug.h"
#include "u_port.h"
#include "u_port_heap.h"
#include "u_port_os.h"
#include "u_port_event_queue.h"
#include "u_port_uart.h"
#include "u_port_private.h"
#include "FreeRTOS.h"
#include "queue.h"
#include "task.h"
#include "nrf.h"
#include "nrf_uarte.h"
#include "nrf_gpio.h"
#include "nrfx_ppi.h"
#include "nrfx_timer.h"
#include "nrf_delay.h"
#include "limits.h" // For INT_MAX
#include "string.h" // For memcpy()
# define U_PORT_UART_MAX_NUM 2
#  define U_PORT_UART_MAX_NUM 2
#    define U_PORT_UART_MAX_NUM 1
#define U_PORT_UART_TX_QUEUE_LENGTH 16
#define U_PORT_UART_RX_DMA_LENGTH   1
#define U_PORT_UART_TX_DMA_LENGTH   32

static void uartClose(int32_t handle)
{
    uint32_t pinRtsNrf;
    uint32_t pinCtsNrf;
    NRF_UARTE_Type *pReg;

    if ((handle >= 0) &&
        (handle < sizeof(gUartData) / sizeof(gUartData[0]))) {
        if (gUartData[handle].pRxBuff != NULL) {
            pReg = gUartData[handle].pReg;

            // Disable Rx interrupts
            nrf_uarte_int_disable(pReg, NRF_UARTE_INT_ENDTX_MASK |
                                  NRF_UARTE_INT_TXSTOPPED_MASK |
                                  NRF_UARTE_INT_ENDRX_MASK);
            NRFX_IRQ_DISABLE(nrfx_get_irq_number((void *) (pReg)));

            // Make sure all transfers are finished before UARTE is
            // disabled to achieve the lowest power consumption
            nrf_uarte_event_clear(pReg, NRF_UARTE_EVENT_RXTO);
            nrf_uarte_task_trigger(pReg, NRF_UARTE_TASK_STOPRX);
            nrf_uarte_event_clear(pReg, NRF_UARTE_EVENT_TXSTOPPED);
            nrf_uarte_task_trigger(pReg, NRF_UARTE_TASK_STOPTX);
            while (!nrf_uarte_event_check(pReg, NRF_UARTE_EVENT_TXSTOPPED) ||
                   !nrf_uarte_event_check(pReg, NRF_UARTE_EVENT_RXTO)) {}

            // Disable the UARTE
            nrf_uarte_disable(pReg);

            // Put the pins back
            nrf_gpio_cfg_default(nrf_uarte_tx_pin_get(pReg));
            nrf_gpio_cfg_default(nrf_uarte_rx_pin_get(pReg));
            nrf_uarte_txrx_pins_disconnect(pReg);
            pinRtsNrf = nrf_uarte_rts_pin_get(pReg);
            pinCtsNrf = nrf_uarte_cts_pin_get(pReg);
            nrf_uarte_hwfc_pins_disconnect(pReg);
            if (pinCtsNrf != NRF_UARTE_PSEL_DISCONNECTED) {
                nrf_gpio_cfg_default(pinCtsNrf);
            }
            if (pinRtsNrf != NRF_UARTE_PSEL_DISCONNECTED) {
                nrf_gpio_cfg_default(pinRtsNrf);
            }

            // Remove the callback if there is one
            if (gUartData[handle].eventQueueHandle >= 0) {
                uPortEventQueueClose(gUartData[handle].eventQueueHandle);
            }
            gUartData[handle].eventQueueHandle = -1;

            // And finally free the allocated resources
            // and mark them NULL
            uPortFree(gUartData[handle].pRxBuff);
            gUartData[handle].pRxBuff = NULL;
            gUartData[handle].pTxBuff = NULL;
            gUartData[handle].bufferRead = 0;
            gUartData[handle].bufferWrite = 0;
            gUartData[handle].bufferFull = false;
            gUartData[handle].txWritten = 0;
            uPortSemaphoreDelete(gUartData[handle].txSem);
            uPortQueueDelete(gUartData[handle].txQueueHandle);
        }
    }
}

void uPortUartDeinit()
{
    if (gMutex != NULL) {

        U_PORT_MUTEX_LOCK(gMutex);

        // Close all the UART instances
        for (size_t x = 0; x < sizeof(gUartData) / sizeof(gUartData[0]); x++) {
            if (gUartData[x].pRxBuff != NULL) {
                uartClose(x);
            }
        }

        // Delete the mutex
        U_PORT_MUTEX_UNLOCK(gMutex);
        uPortMutexDelete(gMutex);
        gMutex = NULL;
    }
}

int32_t uPortUartOpen(int32_t uart, int32_t baudRate,
                      void *pReceiveBuffer,
                      size_t receiveBufferSizeBytes,
                      int32_t pinTx, int32_t pinRx,
                      int32_t pinCts, int32_t pinRts)
{
    uErrorCode_t handleOrErrorCode = U_ERROR_COMMON_NOT_INITIALISED;
    int32_t baudRateNrf = baudRateToNrfBaudRate(baudRate);
    uint32_t pinCtsNrf = NRF_UARTE_PSEL_DISCONNECTED;
    uint32_t pinRtsNrf = NRF_UARTE_PSEL_DISCONNECTED;
    nrf_uarte_hwfc_t hwfc = NRF_UARTE_HWFC_DISABLED;
    NRF_UARTE_Type *pReg;

    if (gMutex != NULL) {

        U_PORT_MUTEX_LOCK(gMutex);

        handleOrErrorCode = U_ERROR_COMMON_INVALID_PARAMETER;
        if ((uart >= 0) &&
            (uart < sizeof(gUartData) / sizeof(gUartData[0])) &&
            (baudRateNrf > 0) && (pinRx >= 0) && (pinTx >= 0) &&
            (pReceiveBuffer == NULL) && (gUartData[uart].pRxBuff == NULL)) {

            handleOrErrorCode = U_ERROR_COMMON_PLATFORM;
            pReg = gUartData[uart].pReg;

            if (uPortQueueCreate(U_PORT_UART_TX_QUEUE_LENGTH,
                                 sizeof(uartTxData_t),
                                 &gUartData[uart].txQueueHandle) == U_ERROR_COMMON_SUCCESS) {
                handleOrErrorCode = U_ERROR_COMMON_SUCCESS;

                // Malloc memory for the read buffer
                gUartData[uart].rxBufferSizeBytes = receiveBufferSizeBytes;
                gUartData[uart].pRxBuff = pUPortMalloc(gUartData[uart].rxBufferSizeBytes);
                gUartData[uart].pTxBuff = NULL;

                // Set up the rest of the UART data structure
                gUartData[uart].uartHandle = uart;
                gUartData[uart].hwfcSuspended = false;
                gUartData[uart].eventQueueHandle = -1;
                gUartData[uart].eventFilter = 0;
                gUartData[uart].pEventCallback = NULL;
                gUartData[uart].pEventCallbackParam = NULL;
                gUartData[uart].bufferRead = 0;
                gUartData[uart].bufferWrite = 0;
                gUartData[uart].bufferFull = false;
                uPortSemaphoreCreate(&gUartData[uart].txSem, 0, 1);
                nrf_uarte_disable(pReg);
                // Set baud rate
                nrf_uarte_baudrate_set(pReg, baudRateNrf);
                // Set Tx/Rx pins
                nrf_gpio_pin_set(pinTx);
                nrf_gpio_cfg_output(pinTx);
                nrf_uarte_txrx_pins_set(pReg, pinTx, pinRx);
                // Set flow control
                if (pinCts >= 0) {
                    pinCtsNrf = pinCts;
                    nrf_gpio_cfg_input(pinCtsNrf,
                                       NRF_GPIO_PIN_NOPULL);
                    hwfc = NRF_UARTE_HWFC_ENABLED;
                }
                if (pinRts >= 0) {
                    pinRtsNrf = pinRts;
                    nrf_gpio_pin_set(pinRtsNrf);
                    nrf_gpio_cfg_output(pinRtsNrf);
                    hwfc = NRF_UARTE_HWFC_ENABLED;
                }
                if (hwfc == NRF_UARTE_HWFC_ENABLED) {
                    nrf_uarte_hwfc_pins_set(pReg, pinRtsNrf, pinCtsNrf);
                }
                // Configure the UART
                nrf_uarte_configure(pReg, NRF_UARTE_PARITY_EXCLUDED, hwfc);
                // Enable the UART
                nrf_uarte_enable(pReg);
                // Clear flags, set Rx interrupt and buffer and let it go
                nrf_uarte_event_clear(pReg, NRF_UARTE_EVENT_ENDRX);
                nrf_uarte_event_clear(pReg, NRF_UARTE_EVENT_ENDTX);
                nrf_uarte_event_clear(pReg, NRF_UARTE_EVENT_ERROR);
                nrf_uarte_event_clear(pReg, NRF_UARTE_EVENT_RXSTARTED);
                nrf_uarte_event_clear(pReg, NRF_UARTE_EVENT_TXSTOPPED);
                // Off we go
                nrf_uarte_rx_buffer_set(pReg,
                                        &gUartData[uart].rxDmaBuff,
                                        U_PORT_UART_RX_DMA_LENGTH);
                nrf_uarte_task_trigger(pReg, NRF_UARTE_TASK_STARTRX);
                nrf_uarte_int_enable(pReg, NRF_UARTE_INT_ENDTX_MASK |
                                     NRF_UARTE_INT_TXSTOPPED_MASK |
                                     NRF_UARTE_INT_ENDRX_MASK);

                // Turn off Tx at the moment to save power,
                // This will be enabled when there is data to be Txed
                nrf_uarte_task_trigger(pReg, NRF_UARTE_TASK_STOPTX);

                NRFX_IRQ_PRIORITY_SET(getIrqNumber((void *) pReg),
                                      NRFX_UARTE_DEFAULT_CONFIG_IRQ_PRIORITY);
                NRFX_IRQ_ENABLE(getIrqNumber((void *) (pReg)));
                // Return the handle
                handleOrErrorCode = gUartData[uart].uartHandle;
            }
        }

        U_PORT_MUTEX_UNLOCK(gMutex);
    }

    return (int32_t) handleOrErrorCode;
}

int32_t uPortUartRead(int32_t handle, void *pBuffer,
                      size_t sizeBytes)
{
    uErrorCode_t sizeOrErrorCode = U_ERROR_COMMON_NOT_INITIALISED;
    NRF_UARTE_Type *pReg;
    uint8_t *pRxBuff;
    uint32_t rxBuffSize;
    uint8_t *pTempBuff;

    if (gMutex != NULL) {

        U_PORT_MUTEX_LOCK(gMutex);

        sizeOrErrorCode = U_ERROR_COMMON_INVALID_PARAMETER;
        if ((pBuffer != NULL) && (sizeBytes > 0) && (handle >= 0) &&
            (handle < sizeof(gUartData) / sizeof(gUartData[0]))) {

            pReg = gUartData[handle].pReg;
            pRxBuff = gUartData[handle].pRxBuff;
            pTempBuff = (uint8_t *)pBuffer;
            rxBuffSize = gUartData[handle].rxBufferSizeBytes;
            // No of bytes available to read
            sizeOrErrorCode = uartGetRxdBytes(&gUartData[handle]);

            if (sizeOrErrorCode > 0) {

                // Set to no of bytes requested
                if (sizeOrErrorCode > sizeBytes) {
                    sizeOrErrorCode = sizeBytes;
                }

                for (uint32_t i = 0; i < sizeOrErrorCode; i++) {

                    *pTempBuff++ = pRxBuff[gUartData[handle].bufferRead];
                    gUartData[handle].bufferRead++;
                    gUartData[handle].bufferRead %= rxBuffSize;
                }

                // Reset buffer full condition and renable
                // Rx interrupts
                gUartData[handle].bufferFull = false;
                nrf_uarte_int_enable(pReg, NRF_UARTE_INT_ENDRX_MASK);
            }
        }

        U_PORT_MUTEX_UNLOCK(gMutex);
    }

    return (int32_t) sizeOrErrorCode;
}

int32_t uPortUartWrite(int32_t handle, const void *pBuffer,
                       size_t sizeBytes)
{
    uErrorCode_t sizeOrErrorCode = U_ERROR_COMMON_NOT_INITIALISED;
    NRF_UARTE_Type *pReg;
    uartTxData_t txData;
    uPortQueueHandle_t txQueueHandle;

    if (gMutex != NULL) {

        sizeOrErrorCode = U_ERROR_COMMON_INVALID_PARAMETER;
        if ((pBuffer != NULL) && (handle >= 0) &&
            (handle < sizeof(gUartData) / sizeof(gUartData[0]))) {

            U_PORT_MUTEX_LOCK(gMutex);
            pReg = gUartData[handle].pReg;
            txQueueHandle = gUartData[handle].txQueueHandle;

            txData.handle = handle;
            txData.pData = (void *)pBuffer;
            txData.len = sizeBytes;
            // enqueue the buffer here and retrieve it when
            // the TXSTOPPED interrupt is triggered.
            uPortQueueSend(txQueueHandle, (void *)&txData);
            nrf_uarte_int_enable(pReg, NRF_UARTE_INT_TXSTOPPED_MASK);
            uPortSemaphoreTake(gUartData[handle].txSem);
            U_PORT_MUTEX_UNLOCK(gMutex);
            sizeOrErrorCode = sizeBytes;
        }

    }

    return (int32_t) sizeOrErrorCode;
}

bool uPortUartIsRtsFlowControlEnabled(int32_t handle)
{
    bool rtsFlowControlIsEnabled = false;
    NRF_UARTE_Type *pReg;

    if ((gMutex != NULL) && (handle >= 0) &&
        (handle < sizeof(gUartData) / sizeof(gUartData[0]))) {

        U_PORT_MUTEX_LOCK(gMutex);

        pReg = gUartData[handle].pReg;

        if (nrf_uarte_rts_pin_get(pReg) != NRF_UARTE_PSEL_DISCONNECTED) {
            rtsFlowControlIsEnabled = true;
        }

        U_PORT_MUTEX_UNLOCK(gMutex);
    }

    return rtsFlowControlIsEnabled;
}

bool uPortUartIsCtsFlowControlEnabled(int32_t handle)
{
    bool ctsFlowControlIsEnabled = false;
    NRF_UARTE_Type *pReg;

    if ((gMutex != NULL) && (handle >= 0) &&
        (handle < sizeof(gUartData) / sizeof(gUartData[0]))) {

        U_PORT_MUTEX_LOCK(gMutex);

        pReg = gUartData[handle].pReg;

        if (nrf_uarte_cts_pin_get(pReg) != NRF_UARTE_PSEL_DISCONNECTED) {
            ctsFlowControlIsEnabled = true;
        }

        U_PORT_MUTEX_UNLOCK(gMutex);
    }

    return ctsFlowControlIsEnabled;
}
